--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
-#decades-navigation > h1{
-    width: 10%;
+#decades-navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#decades-navigation > h1 {
+    flex: 1;
+    text-align: center;
+    font-size: 1.75vw;
 }
