--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 45vh;
 }
 
 #decades-navigation > h1 {
