--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,50 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 45vh;
+    margin-bottom: 35vh;
 }
 
-#decades-navigation > h1 {
+body {
+    background-color: #6ac5f4;
+}
+
+#decades-navigation>h1 {
     flex: 1;
     text-align: center;
     font-size: 1.75vw;
+    background-color: #fc510b;
+}
+
+#car-details>p {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#car-details>h1 {
+    display: flex;
+    align-items: center;
+    font-size: 0.69 vw;
+}
+
+#car-timeline {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    gap: 10px;
+    padding: 10px;
+    background-color: #6ac5f4;
+}
+
+#car-timeline::after {
+    content: '';
+    display: block;
+    height: 5px;
+    background-color: black;
+    margin-top: 10px;
+}
+
+img {
+    width: 20vw;
+    object-fit: cover;
 }
