--- a/styles.css
+++ b/styles.css
@@ -1,77 +1,62 @@
-
+#decades-navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 35vh;
+}
 
 body {
-  font: normal 16px/1.5 "Helvetica Neue", sans-serif;
-  background: #456990;
-  color: #fff;
+  background-color: #6ac5f4;
+  scroll-behavior: smooth;
 }
 
-
-/* .section SECTION
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.section {
-  background: #F45B69;
-  padding: 50px 0;
+hr {
+  border: 5px solid black;
+  border-radius: 3px;
 }
 
-.section .container {
-  width: 90%;
-  max-width: 1200px;
-  margin: 0 auto;
+#decades-navigation>h1:hover {
+  text-shadow: 5px white;
+}
+
+#decades-navigation>h1 {
+  flex: 1;
   text-align: center;
+  font-size: 1.75vw;
+  background-color: #fc510b;
+  height: 100px;
+  line-height: 4;
 }
 
-.section h1 {
-  font-size: 2.5rem;
+#car-details {
+  /* display: none; */
+  overflow-x: auto;
 }
 
-.section h2 {
-  font-size: 1.3rem;
+#car-details>p {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-
-/* TIMELINE
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.timeline {
-  white-space: nowrap;
-  overflow-x: hidden;
+#car-details>h1 {
+  display: flex;
+  align-items: center;
+  font-size: 0.69 vw;
+  height: 25%;
 }
 
-.timeline ol {
-  font-size: 0;
-  width: 100vw;
-  padding: 250px 0;
-  transition: all 1s;
+#car-timeline {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  gap: 10px;
+  padding: 10px;
+  background-color: #6ac5f4;
 }
 
-.timeline ol li {
-  position: relative;
-  display: inline-block;
-  list-style-type: none;
-  width: 160px;
-  height: 3px;
-  background: #fff;
-}
-
-.timeline ol li:last-child {
-  width: 280px;
-}
-
-.timeline ol li:not(:first-child) {
-  margin-left: 14px;
-}
-
-.timeline ol li:not(:last-child)::after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: calc(100% + 1px);
-  bottom: 0;
-  width: 12px;
-  height: 12px;
-  transform: translateY(-50%);
-  border-radius: 50%;
-  background: #F45B69;
+img {
+  width: 20vw;
+  object-fit: cover;
+  border-right: 5 px solid black;
 }
