--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,18 @@ body {
 }
 
 img {
-    width: 20vw;
+    width: 25vw;
 }
 
 hr {
     border: 5px solid black;
     border-radius: 3px;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+p {
+    font-size: 20px;
 }
