--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@
 body {
     background-color: #6ac5f4;
     scroll-behavior: smooth;
+    padding: 0%;
+    margin: 0%;
 }
 
 #decades-navigation>h1:hover {
@@ -23,9 +25,9 @@ body {
 
 #decades-navigation {
     display: flex;
+    margin-bottom: 20vh;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20vh;
 }
 
 .navigation {
