--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Ferro Rosso';
-    src: url('fonts/FerroRosso-Regular.ttf') format('truetype');
+    src: url('Assets/FerroRosso.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -59,7 +59,7 @@ body {
     border: 2px solid black;
     border-radius: 10px; 
     padding: 20px; 
-    width: 600px; 
+    width: 550px; 
     height: auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     display: none;
@@ -82,5 +82,5 @@ h2 {
 p {
     font-family: "Windpower", sans-serif;
     font-size: 20px;
-    text-shadow: 1px 1px white;
+    text-shadow: 0px 1px white;
 }
