--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,10 @@ body {
 
 #decades-navigation {
     display: flex;
-    margin-bottom: 20vh;
-    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
+    margin-bottom: 20vh;
 }
 
 .navigation {
@@ -91,7 +92,6 @@ h2 {
 p {
     font-family: "Windpower", sans-serif;
     font-size: 20px;
-    text-shadow: 0px 1px white;
 }
 
 #LeMans {
