--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
 .navigation {
     display: flex;
     font-family: "Ferro Rosso", sans-serif;
-    font-size: 1.75vw;
+    font-size: 30px;
     align-items: center;
     height: 100px;
     transition: transform 0.3s ease-out;
@@ -62,18 +62,18 @@ body {
 }
 
 #car-details {
+    display: none;
     background-color: #fc510b;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     margin-top: 5%;
+    margin-bottom: 15%;
+    padding: 20px;
     border: 2px solid black;
     border-radius: 10px;
-    padding: 20px;
-    width: 550px;
-    height: auto;
+    width: auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    display: none;
 }
 
 img {
