--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,22 @@
+@font-face {
+  font-family: 'Ferro Rosso';
+  src: url('fonts/FerroRosso-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Windpower';
+  src: url('Assets/Windpower.otf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   background-color: #6ac5f4;
   scroll-behavior: smooth;
+  padding: 0%;
+  margin: 0%;
 }
 
 #decades-navigation>h1:hover {
@@ -9,18 +25,20 @@ body {
 
 #decades-navigation {
   display: flex;
+  margin-bottom: 20vh;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 25vh;
 }
 
-#decades-navigation>h1 {
-  flex: 1;
-  text-align: center;
+.navigation {
+  font-family: "Ferro Rosso", sans-serif;
   font-size: 1.75vw;
+  text-align: center;
+  flex: 1;
   background-color: #fc510b;
   height: 100px;
   line-height: 4;
+  margin-top: 0%;
 }
 
 #car-timeline {
@@ -32,11 +50,37 @@ body {
   background-color: #6ac5f4;
 }
 
+#car-details {
+  background-color:#fc510b;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 5%;
+  border: 2px solid black;
+  border-radius: 10px; 
+  padding: 20px; 
+  width: 600px; 
+  height: auto;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  display: none;
+}
+
 img {
-  width: 20vw;
+  width: 25vw;
 }
 
 hr {
   border: 5px solid black;
   border-radius: 3px;
+}
+
+h2 {
+  font-family: "Ferro Rosso", sans-serif;
+  font-size: 30px;
+}
+
+p {
+  font-family: "Windpower", sans-serif;
+  font-size: 20px;
+  text-shadow: 1px 1px white;
 }
